--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3030
-MONGO_URL=mongodb://0.0.0.0:27017/crosstheskylimits
+MONGO_URL="mongodb+srv://smarttuttee:HA1gQ9l4VOQ2OvGA@cluster0.6gjzd.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" 
 
 JWT_EXPIRE = '1h'
 JWT_SECRET = "crosstheskylimits2024"
