--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 3030
-MONGO_URL=mongodb://0.0.0.0:27017/crosstheskylimits
+MONGO_URL="mongodb+srv://dubeypuran2002:kIRiJXMHqaAb0zCd@cluster0.ejga2.mongodb.net/"
 
 JWT_EXPIRE = '1h'
 JWT_SECRET = "crosstheskylimits2024"
